styles.css
:root {
    --main-background: #8bb1c5; 
    --navbar-background: #3e4874;
    --navbar-hover: #455285; 
    --sidebar-background: #5372a1; 
    --sidebar-social-background: #5372a1; 
    --sidebar-border: #3e4874;
    --content-background: #3e4874;
    --button-background: #3e4874;
    --button-border: #7b86b7; 
    --button-background-alt: #5372a1;
    --button-border-alt: #c4ddf0; 
    --border: #3e4874; 
    --font-h1: #c4ddf0;
    --font-h2: #c4ddf0;
    --font-h3: #c4ddf0;
    --font-h4: #c4ddf0;
    --font-h5: #c4ddf0;
    --font-h6: #c4ddf0;
}

h1{
    font-size: 1.60rem;
    color: var(--font-h2);
    margin: 10px;
    text-align: center;
    text-shadow: 2px 2px 4px var(--content-background);
}

h2{
    font-size: 1.5rem;
    color:var(--font-h2);
    margin: 0;
    padding: 15px 0 15px 0;
}

h3{
    font-size: 1.5rem;
    color:var(--font-h3);
    margin: 0;
}

h4{
    margin: 0;
    font-weight: normal;
    font-size: 1rem;
    color:var(--font-h4);
}

h5{
    text-align: left;
    font-size: 1.2rem;
    margin: 0;
    padding-bottom: 15px;
    color:var(--font-h5);
}

h6{
    color: var(--font-h6);
    font-weight: normal;
    margin: 0;
    padding: 5px 0 0 0;
    font-size: 1rem;
}


body {
    font-family:Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    justify-content: space-between; 
    background-color: var(--main-background);
    color: #EEE3EC;
    margin: 0; 
}

hr{
    width: 80%;
    border-color: var(--sidebar-social-background);
}

.navbar {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
    background-color: var(--navbar-background);
    overflow: hidden;
    border-radius: 0 0 10px 10px;

}

.navbar a {
    float: left;
    display: block;
    color: var(--font-h4);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.navbar a:hover {
    background-color: var(--navbar-hover);
}


.background {
    display: flex;
    justify-content: space-around;
    height: 100%;
}

.sidebar {
    position: fixed;
    top: 45px;
    left: 0; 
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 400px;
    background-color: var(--sidebar-background);
 
    border-radius: 5px;
    text-align: center;
    align-items: center;
    margin: 15px;
    font-size: 1em;
    height: auto;
    overflow-y: auto;
}

.profile-description,
.info-language,
.tools-logo {
    width: 100%;
}

.profile {
    display: flex;
    flex-direction: column;
    text-align: center;
    background-color: var(--sidebar-social-background);
    gap: 10px;
    padding: 30px 0 0 0;
}

.profile-picture {
    height: 100px;
    width: 100px;  
    align-self: center;
    border-radius: 50%;
   
}

.profile-name{
    font-weight: bold;
    margin: 0px;
}

.profile-links{
    text-decoration: none;
    color: #C3DDeB;
}

.information{
    display: flex;
    flex-direction: column;
    margin: 0px;
    gap: 20px;
    padding-top: 15px;
}

.info-location,
.info-education,
.info-language{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 20px;
}

.city,
.school,
.language{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
} 

.tools{
    display: flex;
    flex-direction: column;
    align-self: center;
    padding-bottom: 5px;
}

.tools-logo,
.socials-logo{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 5px;

}

.tool{
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    padding: 5px;

}

.tool img {
    height: 45px;
    width: 45px;
}

.tool p {
    margin: 0;
    padding: 5px;
    font-size: 16px;
}



.socials{
    background: var(--sidebar-social-background);
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0px;
    height: 75%;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    padding: 0 0 15px 0 ;
}


.tools-header,
.socials-header{
    font: bolder;
    margin: 0px;
    padding: 0 0 15px 0;
}

.social{
    height: 50px;
    width: 50px;  
    border-radius: 50%;
    margin: 0 10px;

}


.content {
    display: flex;
    position: relative;
    flex: 1;
    top: 45px;
    flex-direction: column;
    background-color: var(--content-background);
    border-radius: 5px;
    justify-content: space-between;
    margin: 15px 15px 15px 430px;
    padding: 25px;
}


.banner{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image:url(./image/Bubble-Backgrounds.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    height: 300px;
    width: auto;
    gap: 10px;
}

.site{
    width: 300px;
    height: 150px;
    border-radius: 5px;
    border-color: var(--button-border);
    border-style:solid;
    border-width: 4px;
}

.site-alt {
    width: 300px;
    height: 150px;
    border-radius: 5px;
    border-color: var(--button-border-alt);
    border-style:solid;
    border-width: 4px;
}

.website-content{
    display: flex;  
    text-wrap: wrap;
    justify-content: space-between;
}

.description{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-wrap:wrap;
    gap: 25px;
}


button{
    height: 50px;
    width: 100px;
    background-color: var(--button-background);
    border-color: var(--button-border);
    color: var(--font-h3);
    border-style: solid;
    border-radius: 5px;
    cursor:pointer;
}
.button-alt {
    height: 50px;
    width: 100px;
    background-color: var( --button-background-alt);
    border-color: var(--button-border-alt);
    color: var(--font-h3);
    border-style: solid;
    border-radius: 5px;
    cursor:pointer;
}

.project-item{
    background: var(--sidebar-background);
}


.project-item,
.project-item-alt {
    padding: 15px;
    border-radius: 5px;
    height: 200px;
}

.contact-links{
display: flex;
padding: 10px;
text-decoration: none;
color:var(--font-h4);
}

@media (max-width: 780px) {
    .background {
        flex-direction: column;
    }
    .sidebar {
        position: relative;
        width: 100%;
        z-index: 0;
        margin: 0;
        padding: 0;
    }
    .content {
        position: relative;
        margin: 0;
        padding: 0;
        width: 100%;
    }
    .navbar {
        position: fixed;
        top: 0;
        width: 100%;
        z-index: 10;
        background-color: var(--navbar-background);
        overflow: hidden;
        border-radius: 0 0 10px 10px;
        
    }
    .banner{
        height: 200px;
    }
    .website-content{
        position:relative;
        display: flex;
        flex-direction: column;
        width: 100%;
        height: 100%;
        margin-bottom: 15px;
        font: 1rem;
    }
    button,
    .button-alt {
        justify-content: center;
        width: 100%;
        font-size: 1rem;

    }
    .project-item
    .project-item-alt{
        padding: 10px;
    }
    h1{
        font-size: 1rem;
    }
    h2{
        padding: 10px 0 10px 10px;
        
    }

    .site-alt,
    .site{
        height: 100%;
        width: 99%;
    } 
    .site{
        border: 3px solid var(--button-border)
    }
    .site-alt{
        border: 3px solid var(--button-border-alt)
    }
}

